--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@thirdweb-dev/react": "^3.9.0",
     "@thirdweb-dev/sdk": "^3.9.0",
     "ethers": "^5.7.2",
+    "process": "^0.11.10",
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-scripts": "^5.0.1",
