--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/user-event": "^14.4.3",
     "@thirdweb-dev/react": "^3.9.0",
     "@thirdweb-dev/sdk": "^3.9.0",
+    "bootstrap": "^4.6.0",
     "ethers": "^5.7.2",
     "process": "^0.11.10",
     "react": "^18.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2",
+    "react-icons": "^4.8.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.9",
     "web-vitals": "^3.1.0"
   },
   "devDependencies": {
