--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2",
     "react-icons": "^4.8.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.15.4",
     "styled-components": "^5.3.9",
     "web-vitals": "^3.1.0"
   },
